# teatime

./: .gitignore  CMakeLists.txt  index.html  main.cpp  milestone.html  proposal.html  style.css
docs/: index.html  milestone.html  proposal.html  style.css
models/: cake.stl  cake_small.stl  cube.stl  glass_teacup2.stl  glass_teacup_smaller.stl  small_teaset.stl  small_teaset2.stl  small_teaset_transform1.stl  teapot_closed_small.stl  teaset.stl
shaders/: Default.vert  Diffuse.frag  Normal.frag  Phong.frag  Testing.frag  Testing.vert
src/: camera.cpp  camera.h  fluid.cpp  fluid.h  main.cpp  particle.cpp  particle.h  renderer.cpp  renderer.h  sph.cpp  sph.h  sphere.cpp  sphere.h  sphere_drawing.cpp  sphere_drawing.h  triangle.h  util.cpp  util.h
src/utils/: bbox.cpp  bbox.h  mathutil.cpp  mathutil.h  vector3D.h
